Fix for bug 105716: Can't delete the input characters in the above form page

Modified RemoveFrame() to call mFloaters.DestroyFrame(aOldFrame) after
the line search. This insures that aOldFrame is destroyed even if it
isn't found in the line list.

r=dbaron@fas.harvard.edu  sr=waterson@netscape.com